--- a/create.html
+++ b/create.html
@@ -7,6 +7,8 @@
     <title>Create contact</title>
     <link rel="stylesheet" href="css/bootstrap4.5.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script src="js/jquery3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.27.0/feather.min.js" integrity="sha256-xHkYry2yRjy99N8axsS5UL/xLHghksrFOGKm9HvFZIs=" crossorigin="anonymous"></script>
 </head>
@@ -31,59 +33,75 @@
             <!-- Start col -->
             <div class="col-lg-12">
                 <div class="card m-b-30">
-                    <div class="card-body py-5">
-                        <div class="row">
-                            <div class="col-lg-3 text-center">
-                                <label for="avatar">
-                                    <img src="images/default.jpg" class="img-fluid mb-3" alt="user" />
-                                </label>
-                                <input type="file" class="form-control-file" id="avatar">
+                    <form action="https://webhook.site/14e51441-12f1-4efa-8bfc-5334838e1bc2" method="post">
+                        <div class="card-body py-5">
+                            <div class="row">
+                                <div class="col-lg-3 text-center">
+                                    <label for="avatar">
+                                        <img src="images/default.jpg" class="img-fluid mb-3" alt="user" />
+                                    </label>
+                                    <input type="file" class="form-control-file" id="avatar">
+                                </div>
+                                <div class="col-lg-9">
+                                    <form action="">
+                                        <div class="form-group">
+                                            <input class="form-control form-control-plaintext w-25 d-inline-block" type="text" name="first_name" placeholder="First name">
+                                            <input class="form-control form-control-plaintext w-25 d-inline-block" type="text" name="last_name" placeholder="Last name">
+                                            <input class="form-control form-control-sm mt-2 form-control-plaintext" type="text" name="phone" placeholder="Phone number">
+                                        </div>
+                                        <div class="table-responsive">
+                                            <table class="table table-borderless mb-0">
+                                                <tbody>
+                                                <tr>
+                                                    <th scope="row" class="p-1"><label for="email" class="mb-0">Email</label></th>
+                                                    <td class="p-1"><input type="email" class="form-control-plaintext py-0" id="email" name="email" placeholder="email@example.com"></td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row" class="p-1"><label class="mb-0">Gender</label></th>
+                                                    <td class="p-1">
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio" name="gender" id="male" value="male">
+                                                            <label class="form-check-label" for="male">Male</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio" name="gender" id="female" value="female">
+                                                            <label class="form-check-label" for="female">Female</label>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row" class="p-1"><label class="mb-0">Title</label></th>
+                                                    <td class="p-1">
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio" name="name_title" id="Mr" value="Mr">
+                                                            <label class="form-check-label" for="Mr">Mr</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio" name="name_title" id="Ms" value="Ms">
+                                                            <label class="form-check-label" for="Ms">Ms</label>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row" class="p-1"><label for="country" class="mb-0">Country</label></th>
+                                                    <td class="p-1"><input name="country" type="text" class="form-control-plaintext py-0" id="country" placeholder="country"></td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row" class="p-1"><label for="city" class="mb-0">City</label></th>
+                                                    <td class="p-1"><input name="city" type="text" class="form-control-plaintext py-0" id="city" placeholder="city"></td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
-                            <div class="col-lg-9">
-                                <form action="">
-                                    <div class="form-group">
-                                        <input class="form-control form-control-plaintext" type="text" placeholder="Name">
-                                        <input class="form-control form-control-sm mt-2 form-control-plaintext" type="text" placeholder="Phone number">
-                                    </div>
-                                    <div class="table-responsive">
-                                        <table class="table table-borderless mb-0">
-                                            <tbody>
-                                            <tr>
-                                                <th scope="row" class="p-1"><label for="email" class="mb-0">Email</label></th>
-                                                <td class="p-1"><input type="text" class="form-control-plaintext py-0" id="email" placeholder="email@example.com"></td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row" class="p-1"><label class="mb-0">Gender</label></th>
-                                                <td class="p-1">
-                                                    <div class="form-check form-check-inline">
-                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male">
-                                                        <label class="form-check-label" for="inlineRadio1">Male</label>
-                                                    </div>
-                                                    <div class="form-check form-check-inline">
-                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="female">
-                                                        <label class="form-check-label" for="inlineRadio2">Female</label>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row" class="p-1"><label for="country" class="mb-0">Country</label></th>
-                                                <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="country" placeholder="country"></td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row" class="p-1"><label for="city" class="mb-0">City</label></th>
-                                                <td class="p-1"><input name="email" type="text" class="form-control-plaintext py-0" id="city" placeholder="city"></td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </form>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Create</button>
                             </div>
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary">Create</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
